--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             var scroll = $(window).scrollTop();
             var windowHeight = $(window).height();
             if (scroll > elemPos - windowHeight + 150){
-                $(this).addClass('scrollin');
+                $(".top-wrap").addClass('scrollin');
             }
         });
     });        });
